# ring-buffer-benchmarks

./: .gitignore  CMakeLists.txt  LICENSE  MutexBuffer.hpp  README.md
bench/: CMakeLists.txt  MutexBufferBench.cpp  SPSCBufferBench.cpp  benchmark-environment.md
bench/data/: BenchData.hpp  BenchPayload.hpp
bench/results/derived/: 28-04-2026-main.csv  28-04-2026-staged.csv
bench/results/raw/: 28-04-2026-main.json
bench/results/tabulated/: 28-04-2026-isolated.csv
bench/scripts/: generate_headline_plots.py  generate_isolated_plots.py  generate_staged_plots.py  summarize_benchmarks.py
bench/variants/: SPSCBufferBaselineBench.cpp
bench/variants/isolated/: SPSCBufferBranchWrapIndicesBench.cpp  SPSCBufferCacheAlignmentBench.cpp  SPSCBufferCachedCursorsBench.cpp  SPSCBufferMemOrderBench.cpp  SPSCBufferMonoBitmaskBench.cpp  SPSCBufferMonoModulusBench.cpp  SPSCBufferPaddingBench.cpp
bench/variants/staged/: SPSCBufferStage1Bench.cpp  SPSCBufferStage2Bench.cpp  SPSCBufferStage3Bench.cpp  SPSCBufferStage4Bench.cpp  SPSCBufferStage5Bench.cpp  SPSCBufferStage6Bench.cpp
examples/: MutexBuffer.hpp  SPSCBufferExample.cpp
include/ringbuffers/: MutexBuffer.hpp  SPSCBuffer.hpp
include/ringbuffers/variants/: SPSCBufferBaseline.hpp  SPSCBufferUnoptimized.hpp
include/ringbuffers/variants/isolated/: SPSCBufferBranchWrapIndices.hpp  SPSCBufferCacheAlignment.hpp  SPSCBufferCachedCursors.hpp  SPSCBufferMemOrder.hpp  SPSCBufferMonoBitmask.hpp  SPSCBufferMonoModulus.hpp  SPSCBufferPadding.hpp
include/ringbuffers/variants/staged/: SPSCBufferStage2.hpp  SPSCBufferStage5.hpp  SPSCBufferStage6.hpp  SPSCStage1.hpp  SPSCStage2.hpp  SPSCStage3.hpp  SPSCStage4.hpp
tests/: CMakeLists.txt  MutexBufferStressTest.cpp  MutexBufferTest.cpp  MutexBufferTests.cpp  SPSCBufferStressTest.cpp  SPSCBufferTest.cpp
tests/stress/: CMakeLists.txt
tests/unit/: CMakeLists.txt  MutexBufferTest.cpp
